# KarsaIDE

./: .gitignore  BACKEND_IMPLEMENTATION.md  BUGFIX_STORAGE.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_PROMPTS.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  KILO_MODELS_CHAT_PROMPT.md  LICENSE  MCP_ENHANCEMENTS.md  NATURAL_FLOW.md  README.md  REMOVE_PLACEHOLDERS_PROMPT.md  STORAGE_OPTIMIZATION_PROMPT.md  STREAMING_GUIDE.md  TAURI_API_REFERENCE.md  TERMINAL_AUTO_DETECT.md  UNIFIED_HISTORY.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_client.rs  cache.rs  commands.rs  config_manager.rs  database.rs  environment.rs  file_system.rs  lib.rs  main.rs  mcp.rs  storage.rs  terminal.rs  workspace.rs
src-tauri/src/intelligence/: classifier.rs  engine.rs  mod.rs
src/lib/: mcp.js
src/lib/components/: ActivityBar.svelte  AgentView.svelte  CodeBlock.svelte  ContextMenu.svelte  Dashboard.svelte  FileExplorer.svelte  FileTreeItem.svelte  Icons.svelte  IntelligenceTab.svelte  MCPToolCall.svelte  MarkdownRenderer.svelte  MenuBar.svelte  ModelSelector.svelte  ResizablePanel.svelte  Settings.svelte  Sidebar.svelte  TabBar.svelte  Terminal.svelte  TitleBar.svelte
src/lib/components/Chat/: ChatPanel.svelte  StreamingMessage.svelte  ThinkingBlock.svelte  ThinkingBlockInline.svelte  (+1 more)
src/lib/stores/: chatHistory.js  chatHistory.ts  chatStore.svelte.js  config.svelte.js  fileSystem.svelte.js  theme.svelte.js  uiState.svelte.js
(+7 files in other folders)
